[image_analysis,shenker/image_analysis] Renamed and modified mean_composite to power_law_composite, removed other composite funcs.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240525 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240525 Pipeline.ipynb
@@ -31,7 +31,6 @@
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
     "import matplotlib.pyplot as plt\n",
-    "import nd2\n",
     "import nd2reader\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -310,7 +309,7 @@
     "def preprocess_func(\n",
     "    img, filename, position, channel, t, k1=None, center=None, dark=None, flat=None\n",
     "):\n",
-    "    return img"
+    "    return img[:, 300 : img.shape[1] - 300]"
    ]
   },
   {
@@ -365,7 +364,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.raw_frames.keys()"
+    "imgs = [\n",
+    "    x.result() if hasattr(x, \"result\") else x\n",
+    "    for x in next(iter(p._queue._items.values())).args[0]\n",
+    "]"
    ]
   },
   {
@@ -375,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.processed_frames.keys()"
+    "imgs"
    ]
   },
   {
@@ -385,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois.keys()"
+    "imgs2 = [img[:600, :1600] for img in imgs]"
    ]
   },
   {
@@ -395,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois[(8, 0)]"
+    "imgs3 = [img / img.max() for img in imgs2]"
    ]
   },
   {
@@ -405,10 +407,309 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "display_image(np.mean([img**0.5 for img in imgs3], axis=0), scale=True, downsample=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(imgs2[0], scale=True, downsample=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(imgs2[1], scale=True, downsample=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(imgs2[2], scale=True, downsample=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    np.mean([img / img.max() for img in imgs2], axis=0), scale=True, downsample=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(image.power_law_composite(imgs2), scale=True, downsample=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(image.power_law_composite(imgs2, power=0.2), scale=True, downsample=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(image.power_law_composite(imgs2, power=0.1), scale=True, downsample=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.histogram_matching_composite(imgs2, same_dtype=False),\n",
+    "    scale=True,\n",
+    "    downsample=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.cyclic_composite(image.histogram_matching_composite, imgs2, same_dtype=False),\n",
+    "    scale=True,\n",
+    "    downsample=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(np.sqrt(imgs2[0]), scale=True, downsample=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.mean_composite([img**0.5 for img in imgs2], same_dtype=False),\n",
+    "    scale=True,\n",
+    "    downsample=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(np.max([img**0.1 for img in imgs2], axis=0), scale=True, downsample=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    np.max([(img / img.max()) ** 0.1 for img in imgs2], axis=0),\n",
+    "    scale=True,\n",
+    "    downsample=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    np.mean([(img / img.max()) ** 0.1 for img in imgs2], axis=0),\n",
+    "    scale=True,\n",
+    "    downsample=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(imgs2[0] ** 0.1, scale=True, downsample=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs3 = [(img / img.max()) ** 0.05 for img in imgs2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.histogram_matching_composite(imgs2, reduction_func=np.mean, same_dtype=False),\n",
+    "    scale=True,\n",
+    "    downsample=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.histogram_matching_composite(imgs2, reduction_func=np.max, same_dtype=False),\n",
+    "    scale=True,\n",
+    "    downsample=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.histogram_matching_composite(imgs3, reduction_func=np.mean, same_dtype=False),\n",
+    "    scale=True,\n",
+    "    downsample=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.histogram_matching_composite(imgs3, reduction_func=np.max, same_dtype=False),\n",
+    "    scale=True,\n",
+    "    downsample=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.raw_frames.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.processed_frames.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.rois.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.rois[(8, 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "# diag = util.tree()\n",
-    "diag = None\n",
-    "img = p.rois[(8, \"RFP-EM\", 0)]\n",
+    "diag = util.tree()\n",
+    "# diag = None\n",
+    "# img = p.rois[(8, 'RFP-EM', 0)]\n",
+    "img = imgs[0]\n",
     "trenches, info = trench_detection.find_trenches(\n",
     "    img,\n",
     "    # angle=np.deg2rad(0.001),\n",
@@ -424,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +745,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"end_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regrid(diag[\"bboxes\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "68",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -577,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "72",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -637,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -726,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -782,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "81",
    "metadata": {
     "tags": []
    },
@@ -794,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -806,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +1150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57",
+   "id": "85",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -838,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "86",
    "metadata": {
     "tags": []
    },
@@ -851,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "87",
    "metadata": {
     "tags": []
    },
@@ -876,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -891,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -903,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -915,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -927,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -948,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -960,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -972,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -984,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -998,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1010,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1022,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1034,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1047,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1059,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1071,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1083,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1095,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1107,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1119,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1139,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1160,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "109",
    "metadata": {
     "tags": []
    },
@@ -1172,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "110",
    "metadata": {
     "tags": []
    },
@@ -1194,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "111",
    "metadata": {
     "tags": []
    },
@@ -1206,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "112",
    "metadata": {
     "tags": []
    },
@@ -1232,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "113",
    "metadata": {
     "tags": []
    },
@@ -1244,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "116",
    "metadata": {
     "tags": []
    },
@@ -1296,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "117",
    "metadata": {
     "tags": []
    },
@@ -1319,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "118",
    "metadata": {
     "tags": []
    },
@@ -1334,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "119",
    "metadata": {
     "tags": []
    },
@@ -1346,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "120",
    "metadata": {
     "tags": []
    },
@@ -1360,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "121",
    "metadata": {
     "tags": []
    },
@@ -1374,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "122",
    "metadata": {
     "tags": []
    },
@@ -1388,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "123",
    "metadata": {
     "tags": []
    },
