[shenker/image_analysis,image_analysis/trench_detection] Use otsu thresholding in find_trench_ends instead of hacky quantile-based method. Works much better.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240527 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240527 Pipeline.ipynb
@@ -364,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois[(8, 0)]"
+    "p.processed_frames[(8, \"RFP-EM\", 0)].shape"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.processed_frames.keys()"
+    "imgs = p.rois.delayed[(8, 0)].args"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(p.processed_frames[(8, \"RFP-EM\", 0)], scale=True, downsample=2)"
+    "p.rois[(8, 0)]"
    ]
   },
   {
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois[(8, 0)].result()"
+    "p.processed_frames.keys()"
    ]
   },
   {
@@ -404,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois[next(iter(p.rois.keys()))]"
+    "display_image(p.processed_frames[(8, \"RFP-EM\", 0)], scale=True, downsample=2)"
    ]
   },
   {
@@ -414,13 +414,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois.values()  # [(8,0)]"
+    "p.rois[(8, 0)].result()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.rois[next(iter(p.rois.keys()))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.rois.values()  # [(8,0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,45 +514,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "diag = util.tree()\n",
-    "# diag = None\n",
-    "# img = p.rois[(8, 'RFP-EM', 0)]\n",
-    "img = imgs[0]\n",
-    "trenches, info = trench_detection.find_trenches(\n",
-    "    img,\n",
-    "    # angle=np.deg2rad(0.001),\n",
-    "    join_info=False,\n",
-    "    width=12,\n",
-    "    # width_to_line_width_ratio=2,\n",
-    "    # width_to_pitch_ratio=None,\n",
-    "    # peak_func=trench_detection.peaks.find_peaks,\n",
-    "    diagnostics=diag,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches"
+    "img_c = image.power_law_composite(*imgs)"
    ]
   },
   {
@@ -542,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"end_finding\"][\"image_with_lines\"]"
+    "display_image(img_c, scale=True, downsample=4)"
    ]
   },
   {
@@ -552,7 +538,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regrid(diag[\"bboxes\"])"
+    "%%time\n",
+    "diag = util.tree()\n",
+    "# diag = None\n",
+    "# img = p.rois[(8, 'RFP-EM', 0)]\n",
+    "# img = imgs[0]\n",
+    "trenches, info = trench_detection.find_trenches(\n",
+    "    img_c,\n",
+    "    # angle=np.deg2rad(0.001),\n",
+    "    join_info=False,\n",
+    "    # width=12,\n",
+    "    # width_to_line_width_ratio=2,\n",
+    "    width_to_pitch_ratio=1.4 / 3.5,\n",
+    "    # width_to_pitch_ratio=None,\n",
+    "    # peak_func=trench_detection.peaks.find_peaks,\n",
+    "    diagnostics=diag,\n",
+    ")"
    ]
   },
   {
@@ -562,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.raw_frames[(8, \"RFP-EM\", 0)]"
+    "info"
    ]
   },
   {
@@ -572,13 +573,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.measurements.keys()"
+    "trenches"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"end_finding\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skimage.filters.threshold_otsu(np.random.random(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"end_finding\"][\"reduced_profile\"].Curve.I.data[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"end_finding\"][\"reduced_profile\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"end_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regrid(diag[\"bboxes\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.raw_frames[(8, \"RFP-EM\", 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.measurements.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "60",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -691,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55",
+   "id": "64",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -751,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -840,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -896,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -908,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -920,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68",
+   "id": "77",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -952,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -965,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -990,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -1005,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "81",
    "metadata": {
     "tags": []
    },
@@ -1017,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -1029,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1041,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -1062,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1074,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "86",
    "metadata": {
     "tags": []
    },
@@ -1086,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "87",
    "metadata": {
     "tags": []
    },
@@ -1098,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -1112,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1124,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1136,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1148,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1161,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1173,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -1185,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -1197,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1209,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1221,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1233,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1253,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1274,7 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1286,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1308,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1320,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1346,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1358,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1410,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "109",
    "metadata": {
     "tags": []
    },
@@ -1433,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "110",
    "metadata": {
     "tags": []
    },
@@ -1448,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "111",
    "metadata": {
     "tags": []
    },
@@ -1460,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "112",
    "metadata": {
     "tags": []
    },
@@ -1474,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "113",
    "metadata": {
     "tags": []
    },
@@ -1488,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "114",
    "metadata": {
     "tags": []
    },
@@ -1502,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "115",
    "metadata": {
     "tags": []
    },
